refactor: Use Java 21 Language Level Features